log
Fri Apr 22 14:57:41 UTC 2022: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
d370396
Fri Apr 22 15:18:37 UTC 2022: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘minimum’:
treemap.c:59:20: error: ‘tree’ undeclared (first use in this function); did you mean ‘free’?
   TreeNode * aux = tree->root;
                    ^~~~
                    free
treemap.c:59:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:65:1: error: expected ‘;’ before ‘}’ token
 }
 ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:24: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
   if (key == tree->root->key) return tree->root->pair;
                        ^~
treemap.c:88:9: error: expected expression before ‘)’ token
   while()
         ^
treemap.c:89:46: error: lvalue required as left operand of assignment
   if (tree->lower_than (key, aux->pair->key) = 1){
                                              ^
treemap.c:92:46: error: lvalue required as left operand of assignment
   if (tree->lower_than (key, aux->pair->key) = 0)
                                              ^
treemap.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8d95c99
Fri Apr 22 15:19:22 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘minimum’:
treemap.c:59:20: error: ‘tree’ undeclared (first use in this function); did you mean ‘free’?
   TreeNode * aux = tree->pair->root;
                    ^~~~
                    free
treemap.c:59:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:65:1: error: expected ‘;’ before ‘}’ token
 }
 ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:24: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
   if (key == tree->root->key) return tree->root->pair;
                        ^~
treemap.c:88:9: error: expected expression before ‘)’ token
   while()
         ^
treemap.c:89:46: error: lvalue required as left operand of assignment
   if (tree->lower_than (key, aux->pair->key) = 1){
                                              ^
treemap.c:92:46: error: lvalue required as left operand of assignment
   if (tree->lower_than (key, aux->pair->key) = 0)
                                              ^
treemap.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
201e509
Fri Apr 22 15:19:41 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘minimum’:
treemap.c:59:27: error: ‘Pair {aka struct Pair}’ has no member named ‘root’
   TreeNode * aux = x->pair->root;
                           ^~
treemap.c:65:1: error: expected ‘;’ before ‘}’ token
 }
 ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:24: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
   if (key == tree->root->key) return tree->root->pair;
                        ^~
treemap.c:88:9: error: expected expression before ‘)’ token
   while()
         ^
treemap.c:89:46: error: lvalue required as left operand of assignment
   if (tree->lower_than (key, aux->pair->key) = 1){
                                              ^
treemap.c:92:46: error: lvalue required as left operand of assignment
   if (tree->lower_than (key, aux->pair->key) = 0)
                                              ^
treemap.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
2a99a10
Fri Apr 22 15:19:48 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘minimum’:
treemap.c:59:21: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘root’
   TreeNode * aux = x->root;
                     ^~
treemap.c:65:1: error: expected ‘;’ before ‘}’ token
 }
 ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:24: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
   if (key == tree->root->key) return tree->root->pair;
                        ^~
treemap.c:88:9: error: expected expression before ‘)’ token
   while()
         ^
treemap.c:89:46: error: lvalue required as left operand of assignment
   if (tree->lower_than (key, aux->pair->key) = 1){
                                              ^
treemap.c:92:46: error: lvalue required as left operand of assignment
   if (tree->lower_than (key, aux->pair->key) = 0)
                                              ^
treemap.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
096c1d3
Fri Apr 22 15:20:02 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘minimum’:
treemap.c:59:21: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘root’
   TreeNode * aux = x->root;
                     ^~
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:24: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
   if (key == tree->root->key) return tree->root->pair;
                        ^~
treemap.c:88:9: error: expected expression before ‘)’ token
   while()
         ^
treemap.c:89:46: error: lvalue required as left operand of assignment
   if (tree->lower_than (key, aux->pair->key) = 1){
                                              ^
treemap.c:92:46: error: lvalue required as left operand of assignment
   if (tree->lower_than (key, aux->pair->key) = 0)
                                              ^
treemap.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
7af77a4
Fri Apr 22 15:51:09 UTC 2022: 
 treemap.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:10: error: ‘return’ with a value, in function returning void [-Werror]
   return NULL;
          ^~~~
treemap.c:50:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
treemap.c: In function ‘minimum’:
treemap.c:59:21: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘root’
   TreeNode * aux = x->root;
                     ^~
treemap.c: In function ‘searchTreeMap’:
treemap.c:90:8: error: too few arguments to function ‘is_equal’
     if(is_equal(key,aux->pair->key)) return aux->pair;
        ^~~~~~~~
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d20484d
Fri Apr 22 15:51:44 UTC 2022: 
 treemap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:10: error: ‘return’ with a value, in function returning void [-Werror]
   return NULL;
          ^~~~
treemap.c:50:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:8: error: too few arguments to function ‘is_equal’
     if(is_equal(key,aux->pair->key)) return aux->pair;
        ^~~~~~~~
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8a05b85
Fri Apr 22 15:52:05 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:8: error: too few arguments to function ‘is_equal’
     if(is_equal(key,aux->pair->key)) return aux->pair;
        ^~~~~~~~
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
Compilation failed
3543e4a
Fri Apr 22 15:52:26 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4ebd73a
Fri Apr 22 15:53:21 UTC 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:87:9: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘pair’
     tree->pair->current = aux->pair;
         ^~
Compilation failed
549d3cc
Fri Apr 22 15:53:33 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b752d9c
Fri Apr 22 15:56:32 UTC 2022: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
b7cc8a9
Fri Apr 22 15:57:09 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:98:8: error: ‘return’ with no value, in function returning non-void [-Werror]
   else return;
        ^~~~~~
treemap.c:81:8: note: declared here
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
954ec52
Fri Apr 22 15:57:16 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
02c15e1
